Imported Upstream version 2.0.5~rc2

--- a/man/man5/AppleVolumes.default.5.tmpl
+++ b/man/man5/AppleVolumes.default.5.tmpl
@@ -3,11 +3,11 @@
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.74.3 <http://docbook.sf.net/>
 .\"      Date: 30 January 2009
-.\"    Manual: Netatalk 2.0.4
-.\"    Source: Netatalk 2.0.4
+.\"    Manual: Netatalk 2.0.5
+.\"    Source: Netatalk 2.0.5
 .\"  Language: English
 .\"
-.TH "APPLEVOLUMES\&.DEFAU" "5" "30 January 2009" "Netatalk 2\&.0\&.4" "Netatalk 2.0.4"
+.TH "APPLEVOLUMES\&.DEFAU" "5" "30 January 2009" "Netatalk 2.0.5" "Netatalk 2.0.5"
 .\" -----------------------------------------------------------------
 .\" * set default formatting
 .\" -----------------------------------------------------------------
@@ -121,6 +121,11 @@ afpd\&.conf\&.
 options:\fI[option]\fR
 .RS 4
 This allows multiple options to be specified in a comma delimited format\&. The available options are:
+.PP
+tm
+.RS 4
+Enable Time Machine suport for this volume\&.
+.RE
 .PP
 invisibledots
 .RS 4
